Resolved issue of Navbar section overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+    padding-top: 10vh;
     font-family: 'Roboto', sans-serif;
     font-size: 1.25rem;
 }
@@ -167,7 +168,7 @@ body {
 /* Jumbotron Container */
 
 .hero-container-image {
-    height: 100vh;
+    height: 90vh;
     background: url(../images/page-header-image.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -190,7 +191,7 @@ body {
 
 .callout-container-section1 {
     /* Set height to full view of device screen */
-    height: 90vh;
+    height: 80vh;
     background-color: transparent;
     
     display: flex;
